--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -83,6 +83,11 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  background-color: #cacaca;
+
 }
 
 body {
@@ -104,4 +109,10 @@ a {
   html {
     color-scheme: dark;
   }
+}
+
+body {
+  width: 100vw;
+  overflow-x: hidden;
+  background-color: #cacaca92;
 }
